Controller buscar todos por autor

--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -9,6 +9,7 @@
 
 <form>
     Titulo: <input type="text" name="titulo"/>
+    Autor: <input type="text" name="autor" />
     <input type="submit">
 </form>
 
