--- a/src/main/resources/static/css/libros.css
+++ b/src/main/resources/static/css/libros.css
@@ -1,3 +1,312 @@
+* {
+    font-family: Arial;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     background: #FFF;
+    padding: 0;
+    margin: 0;
+}
+
+#main-container {
+    float: left;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.header {
+    box-sizing: border-box;
+    width: 100%;
+    height: 70px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.03);
+    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.02);
+    position: fixed;
+    top: 0;
+    z-index: 2;
+}
+
+.main-menu {
+    float: left;
+    width: 70px;
+    height: 100%;
+    background: #363A3E;
+    border: 1px solid rgba(0, 0, 0, 0.03);
+    box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.02);
+}
+
+.main-filter {
+    float: left;
+    width: 260px;
+    height: 100%;
+    background: rgba(80, 84, 87, 0.06);
+    padding: 0;
+}
+
+.main-body {
+    float: left;
+    width: calc(100% - 340px);
+    height: 100%;
+    background: #FFFFFF;
+}
+
+.main-menu, .main-filter, .main-body {
+    padding-top: 68px;
+}
+
+form {
+    width: 100%;
+    height: auto;
+    padding: 0px;
+    margin: 0px;
+}
+
+#input-titulo, #input-autor, .btn-submit {
+    width: 90%;
+    height: 36px;
+    margin: 6px 12px 12px 12px;
+    border: 1px solid rgba(0, 0, 0, 0.03);
+    border-radius: 6px;
+    background: rgba(80, 84, 87, 0.06);
+    padding: 10px;
+    font-size: 13px;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.btn-submit {
+    background: #283897;
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    color: #FFFFFF;
+    font-size: 13px;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+    transition: 0.3s ease;
+}
+
+.btn-submit:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+label {
+    width: 100%;
+    height: auto;
+    margin: 16px 12px 0px 12px;
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.main-options {
+    width: 100%;
+    height: 60px;
+    background: #FFFFFF;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.03);
+    border-left: 1px solid rgba(0, 0, 0, 0.03);
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.main-options {
+    margin-bottom: 14px;
+}
+
+.main-title {
+    float: left;
+    padding: 14px 12px;
+}
+
+.main-options .main-title h6, .main-options .main-title h5 {
+    padding: 0;
+    margin: 0;
+}
+
+.main-options .main-title h6 {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.34);
+    font-weight: 400;
+}
+
+.main-options .main-title h5 {
+    font-size: 16px;
+    color: rgba(0, 0, 0, 1);
+    font-weight: 600;
+}
+
+.btn-new-book {
+    float: right;
+    margin-top: 11px;
+}
+
+.btn-new-book button {
+    width: auto;
+    height: 38px;
+    border-radius: 100px;
+    background: #283897;
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    color: #FFFFFF;
+    padding: 4px 4px 4px 4px;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+    transition: 0.3s ease;
+}
+
+.btn-new-book button:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.btn-new-book button .btn-new-icon {
+    float: left;
+    padding: 4px 8px;
+    font-size: 18px;
+    border-radius: 100px;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: #FFFFFF;
+}
+
+.btn-new-book button .btn-new-text {
+    float: left;
+    padding: 6px 12px 0px 12px;
+    font-size: 14px;
+    color: #FFFFFF;
+}
+
+.logo-container {
+    float: left;
+    width: 70px;
+    height: 68px;
+    background-color: #FFFFFF;
+    border-right: 1px solid rgba(0, 0, 0, 0.03);
+    padding: 14px 0 0 14px;
+}
+
+.header-title {
+    float: left;
+    padding-top: 6px;
+    width: auto;
+    height: 69px;
+    background: transparent;
+    border-bottom: 0px solid rgba(0, 0, 0, 0.03);
+    border-left: 0px solid rgba(0, 0, 0, 0.03);
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.header-title-icon-1 {
+    float: left;
+    margin: 16px 0px 0px 14px;
+    width: 38px;
+    height: 38px;
+    background: rgba(54, 58, 62, 0.06);
+    border-radius: 100px;
+}
+
+.book-icon {
+    width: 38px;
+    height: 38px;
+    background: rgba(54, 58, 62, 0.06);
+    border-radius: 100px;
+}
+
+.header-title-icon-3 {
+    float: right;
+    margin: 16px 0px 0px 14px;
+    width: 38px;
+    height: 38px;
+    background: rgba(54, 58, 62, 0.06);
+    border-radius: 100px;
+}
+
+.header-title-icon-2 {
+    float: right;
+    margin: 16px 10px 0px 12px;
+    width: 120px;
+    height: 38px;
+    background: rgba(54, 58, 62, 0.06);
+    border-radius: 100px;
+}
+
+table {
+    margin: 12px;
+    width: 98%;
+}
+
+th .orden {
+    font-size: 14px;
+    width: 100%;
+    padding: 8px;
+    text-align: center;
+    color: #000000;
+    text-decoration: none;
+    background-color: rgba(80, 84, 87, 0.06);
+    display: block;
+    border-radius: 8px !important;
+    text-transform: capitalize;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+    transition: 0.3s ease;
+}
+
+th .orden:hover {
+    background-color: #363A3E;
+    color: #FFFFFF;
+}
+
+th {
+    padding: 4px;
+    text-align: center;
+    border: 0px solid #ddd;
+    border-bottom: 0px solid #ddd;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+    transition: 0.3s ease;
+
+}
+
+th:hover {
+    background-color: rgba(80, 84, 87, 0.0) !important;
+}
+
+td {
+    padding: 8px 15px;
+    text-align: center;
+    border: 0px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    font-size: 14px;
+
+}
+
+tr {
+    border: 0px solid #ddd;
+}
+
+tr:hover {
+    background-color: rgba(80, 84, 87, 0.04);
 }
