LibroController add pageable

--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -40,6 +40,8 @@
         <input type="text" name="autor" id="input-autor" placeholder="Ingresa autor" th:value="${autor}"/>
 
         <input type="hidden" id="orden" name="orden" value="isbn" />
+        <input type="hidden" id="pagina" name="pagina" value="0" />
+        <input type="hidden" id="size" name="size" value="2">
 
         <input type="submit" class="btn-submit">
     </form>
