--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -41,7 +41,7 @@
 
         <input type="hidden" id="orden" name="orden" value="isbn" />
         <input type="hidden" id="pagina" name="pagina" th:value="${pagina}" />
-        <input type="hidden" id="size" name="size" value="2">
+        <input type="hidden" id="size" name="size" value="8">
 
         <input type="submit" class="btn-submit">
     </form>
@@ -94,8 +94,8 @@
     </table>
 
     <div class="paging-container">
-        <button id="btn-paging-next"><</button>
-        <button id="btn-paging-back">></button>
+        <button id="btn-paging-back"><span><</span> Atras</button>
+        <button id="btn-paging-next">Siguiente <span>></span></button>
     </div>
 
 </div>
