--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -33,8 +33,8 @@
         </div>
     </div>
     <form>
-        <label for="input-titulo">Titulo:</label>
-        <input type="text" name="titulo" id="input-titulo" placeholder="Ingresa titulo" th:value="${titulo}"/>
+        <label for="input-titulo">Título:</label>
+        <input type="text" name="titulo" id="input-titulo" placeholder="Ingresa título" th:value="${titulo}"/>
 
         <label for="input-autor">Autor:</label>
         <input type="text" name="autor" id="input-autor" placeholder="Ingresa autor" th:value="${autor}"/>
