--- a/src/main/resources/static/css/libros.css
+++ b/src/main/resources/static/css/libros.css
@@ -268,11 +268,13 @@ th {
     text-align: center;
     border: 0px solid #ddd;
     border-bottom: 0px solid #ddd;
+    /*
     -webkit-transition: 0.3s ease;
     -moz-transition: 0.3s ease;
     -ms-transition: 0.3s ease;
     -o-transition: 0.3s ease;
     transition: 0.3s ease;
+     */
 
 }
 
