CSS Responsive Design

--- a/src/main/resources/static/css/libros.css
+++ b/src/main/resources/static/css/libros.css
@@ -39,11 +39,52 @@ body {
     background: #363A3E;
     border: 1px solid rgba(0, 0, 0, 0.03);
     box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.02);
+    position: relative;
+}
+
+.main-menu-options {
+    width: 69px;
+    height: auto;
+    margin: 0 auto;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.main-menu-options div {
+    margin: 0 auto;
+    margin-top: 11px;
+    width: 46px;
+    height: 46px;
+    border-radius: 100px;
+    background: rgba(255, 255, 255, 0.13);
+    display: grid;
+    align-items: center;
+}
+
+.main-menu-user {
+    position: absolute;
+    margin: 0 auto;
+    bottom: 0;
+    left: 0;
+    width: 69px;
+    height: 70px;
+    background: #2B2E32;
+}
+
+.main-menu-user div {
+    margin: 0 auto;
+    margin-top: 11px;
+    width: 46px;
+    height: 46px;
+    border-radius: 100px;
+    background: rgba(255, 255, 255, 0.13);
 }
 
 .main-filter {
     float: left;
-    width: 260px;
+    width: 240px;
     height: 100%;
     background: rgba(80, 84, 87, 0.06);
     padding: 0;
@@ -51,7 +92,7 @@ body {
 
 .main-body {
     float: left;
-    width: calc(100% - 340px);
+    width: calc(100% - 320px);
     height: 100%;
     background: #FFFFFF;
 }
@@ -89,6 +130,11 @@ form {
     border: 1px solid rgba(0, 0, 0, 0.6);
     color: #FFFFFF;
     font-size: 13px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .btn-submit:hover {
@@ -348,3 +394,177 @@ tr:hover {
     border-radius: 100px;
 }
 
+.table-container {
+    width: 100%;
+    height: auto;
+    overflow: auto;
+}
+
+@media (max-width: 1024px) {
+    table {
+        width: 700px;
+    }
+
+    th .orden {
+        font-size: 13px;
+        padding: 6px 8px;
+    }
+
+    th, td {
+        padding: 4px 6px;
+    }
+}
+
+@media (max-width: 820px) {
+    .main-menu {
+        display: none;
+    }
+
+    .main-filter {
+        width: 200px;
+        height: 100%;
+    }
+
+    #input-titulo, #input-autor, .btn-submit {
+        width: 88%;
+    }
+
+    .main-body {
+        width: calc(100% - 210px);
+    }
+}
+
+@media (max-width: 539px) {
+
+    .main-filter {
+        padding-top: 54px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        -o-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+    #input-titulo, #input-autor, .btn-submit {
+        float: left;
+        width: calc(50% - 52px);
+        margin: 0px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        -o-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+    #input-titulo {
+        margin: 0px 6px 12px 12px;
+    }
+
+    #input-autor {
+        margin: 0px 0px 12px 0px;
+    }
+
+    .btn-submit {
+        width: 70px;
+        margin: 0px 0px 12px 6px;
+    }
+
+    .main-menu, .main-body {
+        padding-top: 0px;
+    }
+
+    .header {
+        height: 54px;
+    }
+
+    .header-title-icon-1 {
+        margin: 8px 0px 0px 14px;
+    }
+
+    .main-options {
+        height: 36px;
+        background: transparent;
+        border-bottom: solid 0px #000000;
+        margin-bottom: 0px;
+    }
+
+    .logo-container {
+        width: 54px;
+        height: auto;
+        padding: 8px 0 0 8px;
+    }
+
+    .header-title-icon-3 {
+        margin: 8px 0px 0px 0px;
+    }
+
+    .header-title-icon-2 {
+        margin: 8px 10px 0px 12px;
+    }
+
+    .main-title {
+        padding: 14px 0px 0px 12px;
+    }
+
+    .main-title h6 {
+        display: none;
+    }
+
+    .main-options .main-title h5 {
+        font-size: 14px;
+        color: rgba(0, 0, 0, 1);
+        font-weight: 600;
+    }
+
+    .main-filter .main-options .main-title h5 {
+        font-size: 13px;
+        color: rgba(0, 0, 0, 0.6);
+        font-weight: 300;
+    }
+
+    .main-body .main-options .main-title h5 {
+        font-size: 20px;
+    }
+
+    label {
+        display: none;
+    }
+
+    .main-filter {
+        width: 100%;
+        height: auto;
+    }
+
+    .main-body {
+        width: 100%;
+    }
+
+    .btn-new-book {
+        margin-right: 8px;
+    }
+
+    .main-body .main-options {
+        height: 60px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.03);
+    }
+
+    .main-body .main-options h6 {
+        display: inherit;
+    }
+}
+
+@media (max-width: 425px) {
+
+    .header-title-icon-1 {
+        display: none;
+    }
+
+    .header-title-icon-2 {
+        display: none;
+    }
+
+    .header-title-icon-3 {
+        margin-right: 10px;
+    }
+
+}
